# ZJU_Computational_Photography

./: .gitignore  CMakeLists.txt  ImageCompletion  OpenCvUtility.cpp  OpenCvUtility.h  Photometric.cpp  PhotometricalCorrection.cpp  PhotometricalCorrection.h  PointManager.cpp  PointManager.h  README.md  StructurePropagation.cpp  StructurePropagation.h  TextureCompletion.cpp  TextureCompletion.h  TexturePropagation.cpp  TexturePropagation.h  main.cpp  main_bak.cpp  main_copy.cpp  报告.md
code/: CMakeLists.txt  PhotometricalCorrection.cpp  PhotometricalCorrection.h  StructurePropagation.cpp  StructurePropagation.h  TexturePropagation.cpp  main.cpp
